tests/snapshots/trace_solver@6415864801730654133.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    dont_eat_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: stateless
  request: "[x]: &mut &mut [T]"
---
[x] @ s: &mut &mut [T]
// Applying rule `ConstructorMultiRef`
[x] @ &mut **s: &mut [T]
// Applying rule `ConstructorRef`
x @ &mut (*&mut **s).0: &mut T
// Applying rule `Binding`
let x: &mut T = &mut (*&mut **s).0

// Final bindings (simplified):
let x: &mut T = &mut (**s).0;
