tests/snapshots/trace_solver@6700969450215207705.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: stateless
  request: "[x]: &&&[T]"
---
let [x]: &&&[T] = s
// Applying rule `ConstructorMultiRef`
let [x]: &&[T] = &**s
// Applying rule `ConstructorMultiRef`
let [x]: &[T] = &**&**s
// Applying rule `ConstructorRef`
let x: &T = &(*&**&**s).0
// Applying rule `Binding`
let x: &T = &(*&**&**s).0

// Final bindings (simplified):
let x: &T = &(***s).0;
